--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <!-- Title-->
-  <title>Kitzu - Personal Portfolio Template</title>
+  <title>Ravi Portfolio</title>
   <!-- Description-->
-  <meta name="description" content="Personal Portfolio Template">
+  <meta name="description" content="Ravi Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons-->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -55,7 +55,7 @@
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li> -->
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -65,8 +65,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
-          <h1 class="home-name">Emma <span>Smith</span></h1>
-          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Designer</b><b>Freelancer</b></span></h4>
+          <h1 class="home-name">Ravi <span>Sharma</span></h1>
+          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Freelancer</b></span></h4>
         </div>
       </div>
     </div>
@@ -75,7 +75,6 @@
       <div class="fixed-block block-left">
         <ul class="list-unstyled languages-list">
           <li><a href="#0"><span class="single-language">ENG</span></a></li>
-          <li><a href="#0"><span class="single-language">JAP</span></a></li>
         </ul>
       </div>
       <!-- Social media icons-->
