--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- Navbar-->
   <nav class="navbar-expand-md navbar fixed-top" id="navbar"><a class="navbar-brand" data-scroll="" href="#home-area">
       <!-- Navbar Logo-->
-      <img class="img-fluid" src="img/img-kitzu-logo.png" alt="Logo"></a>
+      <img class="img-fluid" src="img/logo@4x.png" alt="Logo"></a>
     <span class="navbar-menu ml-auto" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" role="button"><span class="btn-line"></span></span>
     <div class="collapse navbar-collapse order-1 order-lg-0" id="navbarSupportedContent">
       <!-- Navbar menu-->
@@ -116,17 +116,17 @@
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
                     <h2 class="content-subtitle">Who am i?</h2>
-                    <h6 class="content-title">I'm Emma Smith, a visual UX/UI Designer and Web Developer</h6>
+                    <h6 class="content-title">I'm Ravi Sharma, a visual UX/UI Designer and Photographer</h6>
                     <div class="content-description">
-                      <p>I am a freelancer based in the United Kingdom and i have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                      <p>I am a freelancer based in the Delhi and i have been building noteworthy UX/UI designs Banners & Posters for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
                     </div>
                     <address class="content-info">
                       <div class="row">
                         <div class="col-12 col-md-6 single-info"><span>Name:</span>
-                          <p>Emma Smith</p>
+                          <p>Ravi Sharma</p>
                         </div>
                         <div class="col-12 col-md-6 single-info"><span>Email:</span>
-                          <p><a href="mailto:emma@example.com">emma@example.com</a></p>
+                          <p><a href="mailto:artistraviinfo@gmail.com">artistraviinfo@gmail.com</a></p>
                         </div>
                       </div>
                       <div class="row">
@@ -134,7 +134,8 @@
                           <p>21</p>
                         </div>
                         <div class="col-12 col-md-6 single-info"><span>From:</span>
-                          <p>Liverpool, UK</p>
+                          <p>H-157, Block A, Old Kondli,
+                            New Delhi, 110096 </p>
                         </div>
                       </div>
                     </address>
@@ -350,17 +351,18 @@
                   <div class="col-block education">
                     <h3 class="col-title">Education</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Computer Science</h5><span class="item-details">Cambridge University / 2004 - 2007</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
+                      <h5 class="item-title">10th & 12th (Science)</h5><span class="item-details">UP Board, Bhatani</span>
+                      <p class="item-description"> completed from
+                        , Deoria (U.P) in 2017, 2019</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Bachelor Degree</h5><span class="item-details">University of Tokyo / 2008 - 2010</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
+                      <h5 class="item-title">Diploma in Graphic Design</h5><span class="item-details">Lal Bahadur Shastri Training Institute</span>
+                      <p class="item-description">Lal Bahadur Shastri Training Institute in 2020, 2021</p>
                     </div>
-                    <div class="resume-item"><span class="item-arrow"></span>
+                    <!-- <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">Master Degree</h5><span class="item-details">Harvard University / 2012 - 2015</span>
                       <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                 <!-- Experience part-->
@@ -368,17 +370,31 @@
                   <div class="col-block experience">
                     <h3 class="col-title">Experience</h3>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Software Engineer</h5><span class="item-details">Adobe / 2015 - 2017</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
+                      <h5 class="item-title">Junior Graphic Designer</h5><span class="item-details">EPIC WEN TECHNO (10-Feb-2022 - 19-May-2023)</span>
+                      <p class="item-description">Responsibilities:-
+                        Handled All social Media platform
+                        Design all (Flyers, brouchers, Danglers,etc.)
+                        Closely worked with Marketing team & Development Team
+                        A+ for amazon and also amazon brand store page for Client.
+                        Website UI and all banners for website.
+                        Photoshoot and videography and Edit.
+                        Making mockups of Ui.</p>
                     </div>
                     <div class="resume-item"><span class="item-arrow"></span>
-                      <h5 class="item-title">Back-End Developer</h5><span class="item-details">Google / 2017 - 2018</span>
-                      <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
+                      <h5 class="item-title">Graphics Designer</h5><span class="item-details">Currently working in eminenture</span>
+                      <p class="item-description">Responsibilities:- Social Media
+                        Design all printing i.e (Flyers, brouchers, Danglers, Standees, etc.)
+                        Closely worked with Development Team
+                        Website UI and all banners for website.
+                        Photoshoot and videography and Edit.
+                        Making mockups of products.
+                        Making short content and Design for oline activity- (Like wall painting, Auto
+                        Branding etc.)</p>
                     </div>
-                    <div class="resume-item"><span class="item-arrow"></span>
+                    <!-- <div class="resume-item"><span class="item-arrow"></span>
                       <h5 class="item-title">UI/UX Designer</h5><span class="item-details">Discord / 2019 - Present</span>
                       <p class="item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quo repudiandae.</p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -396,19 +412,19 @@
               <div class="row">
                 <div class="col-12 col-md-6">
                   <div class="single-skill" data-percentage="95">
-                    <div class="skill-info"><span class="skill-name">HTML/CSS</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Adobe Photoshop</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="80">
-                    <div class="skill-info"><span class="skill-name">Web Design</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Adobe Illustrator</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="90">
-                    <div class="skill-info"><span class="skill-name">JavaScript</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Adobe Premier</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -416,19 +432,19 @@
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="single-skill" data-percentage="90">
-                    <div class="skill-info"><span class="skill-name">React JS</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Adobe After Eect</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="95">
-                    <div class="skill-info"><span class="skill-name">Express.js</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Procreat</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                   <div class="single-skill" data-percentage="80">
-                    <div class="skill-info"><span class="skill-name">TypeScript</span><span class="skill-percentage"></span></div>
+                    <div class="skill-info"><span class="skill-name">Figma</span><span class="skill-percentage"></span></div>
                     <div class="progress skill-progress">
                       <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -676,28 +692,29 @@
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-logo-ionic"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Name</h6><span class="info-value">Emma Smith</span>
+                            <h6 class="info-type">Name</h6><span class="info-value">Ravi Sharma</span>
                           </div>
                         </div>
                       </li>
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-map"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Location</h6><span class="info-value">4155 Mann Island, Liverpool, United Kingdom.</span>
+                            <h6 class="info-type">Location</h6><span class="info-value">H-157, Block A, Old Kondli,
+                              New Delhi, 110096 </span>
                           </div>
                         </div>
                       </li>
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-call"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+441632967704">+44 1632 967704</a></span>
+                            <h6 class="info-type">Call Me</h6><span class="info-value"><a href="tel:+441632967704">+91 88811 40487</a></span>
                           </div>
                         </div>
                       </li>
                       <li>
                         <div class="media align-items-center"><span class="info-icon"><i class="icon ion-md-send"></i></span>
                           <div class="media-body info-details">
-                            <h6 class="info-type">Email Me</h6><span class="info-value"><a href="mailto:emma@example.com">emma@example.com</a></span>
+                            <h6 class="info-type">Email Me</h6><span class="info-value"><a href="mailto:artistraviinfo@gmail.com">artistraviinfo@gmail.com</a></span>
                           </div>
                         </div>
                       </li>
