--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
   <!-- Web fonts-->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
+  
   <!-- CSS vendors-->
   <link rel="stylesheet" href="css/bootstrap-custom.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="css/ionicons.min.css">
   <link rel="stylesheet" href="css/tiny-slider.css">
   <link rel="stylesheet" href="css/lity.min.css">
@@ -80,7 +82,8 @@
       <!-- Social media icons-->
       <div class="fixed-block block-right">
         <ul class="list-unstyled social-icons">
-          <li><a href="#0"><i class="icon ion-logo-twitter"></i></a></li>
+          <!-- <li><a href="#0"><i class="icon ion-logo-twitter"></i></a></li> -->
+          <li><a href="https://www.behance.net/ravipub888cbd7"><i class="icon fa-brands fa-behance"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-facebook"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-linkedin"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-github"></i></a></li>
@@ -111,7 +114,7 @@
             <div class="info-section single-section">
               <div class="row align-items-center">
                 <!-- Picture part-->
-                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/info-img.jpg" alt="About Picture"></div>
+                <div class="col-12 col-lg-5 info-img"><img class="img-fluid img-thumbnail" src="img/My image.jpeg" alt="About Picture"></div>
                 <!-- Content part-->
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
@@ -139,9 +142,10 @@
                         </div>
                       </div>
                     </address>
-                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a>
+                    <div class="d-block d-sm-flex align-items-center"><a class="btn content-download button-main button-scheme" href="img/cv.pdf" role="button">Download CV</a>
                       <ul class="list-unstyled list-inline content-follow">
-                        <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-twitter"></i></a></li>
+                        <!-- <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-twitter"></i></a></li> -->
+                        <li><a href="https://www.behance.net/ravipub888cbd7"><i class="icon fa-brands fa-behance"></i></a></li>
                         <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-instagram"></i></a></li>
                         <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-linkedin"></i></a></li>
                         <li class="list-inline-item"><a href="#0"><i class="icon ion-logo-github"></i></a></li>
