--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row h-100 align-items-center justify-content-center">
         <div class="col-12 col-lg-8 home-content text-center">
           <h1 class="home-name">Ravi <span>Sharma</span></h1>
-          <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Designer</b><b>Freelancer</b></span></h4>
+          <h4 class="cd-headline clip home-headline">Freelance<span class="cd-words-wrapper single-headline"><b class="is-visible">UI/UX Designer</b><b>Visual Creator</b></span></h4>
         </div>
       </div>
     </div>
@@ -119,9 +119,19 @@
                 <div class="col-12 col-lg-7 info-content">
                   <div class="content-block">
                     <h2 class="content-subtitle">Who am i?</h2>
-                    <h6 class="content-title">I'm Ravi Sharma, a visual UX/UI Designer and Photographer</h6>
+                    <h6 class="content-title">About Ravi Sharma</h6>
                     <div class="content-description">
-                      <p>I am a freelancer based in the Delhi and i have been building noteworthy UX/UI designs Banners & Posters for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                      <p>I’m Ravi Sharma, a passionate freelance UI/UX designer, visual artist, and photographer based in Delhi with 3+ years of experience in crafting intuitive digital products, branding visuals, and engaging graphics.</p>
+                    </div>
+                    <div class="content-description">
+                      <p>From startup launches to rebranding established businesses, I help brands grow through:</p>
+                      <ul>
+                        <li>Clean UX design</li>
+                        <li>Eye-catching graphics</li>
+                        <li>Creative storytelling</li>
+                        <li>Fast delivery with attention to detail</li>
+                      </ul>
+                      <p>Keywords: UI/UX designer in Delhi NCR, freelance graphic designer India, portfolio of creative designer, branding expert Delhi</p>
                     </div>
                     <address class="content-info">
                       <div class="row">
