--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="fixed-block block-right">
         <ul class="list-unstyled social-icons">
           <!-- <li><a href="#0"><i class="icon ion-logo-twitter"></i></a></li> -->
-          <li><a href="https://www.behance.net/ravipub888cbd7"><i class="icon fa-brands fa-behance"></i></a></li>
+          <li><a href="https://www.behance.net/ravi_dzinr"><i class="icon fa-brands fa-behance"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-facebook"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-linkedin"></i></a></li>
           <li><a href="#0"><i class="icon ion-logo-github"></i></a></li>
