--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
         <ul class="list-unstyled social-icons">
           <!-- <li><a href="#0"><i class="icon ion-logo-twitter"></i></a></li> -->
           <li><a href="https://www.behance.net/ravi_dzinr"><i class="icon fa-brands fa-behance"></i></a></li>
-          <li><a href="#0"><i class="icon ion-logo-facebook"></i></a></li>
-          <li><a href="#0"><i class="icon ion-logo-linkedin"></i></a></li>
-          <li><a href="#0"><i class="icon ion-logo-github"></i></a></li>
-          <li><a href="#0"><i class="icon ion-logo-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/ravisharmx/"><i class="icon ion-logo-linkedin"></i></a></li>
+          <li><a href="https://github.com/Artist-Ravi"><i class="icon ion-logo-github"></i></a></li>
+          <li><a href="https://www.instagram.com/bindaasdesigner_/?source=omni_redirect"><i class="icon ion-logo-instagram"></i></a></li>
         </ul>
       </div>
     </div>
