--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <!-- Title-->
-  <title>Ravi Portfolio</title>
+  <title>Ravi Sharma</title>
   <!-- Description-->
   <meta name="description" content="Ravi Sharma">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
