--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="img/item-1.jpg" data-lightbox>
                     <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-1.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Label Tag Mockup</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">App UI/UX</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
@@ -545,7 +545,7 @@
                 <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item" href="img/item-2.jpg" data-lightbox>
                     <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-2.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">3D Bag Mockup</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Logo Design</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
@@ -553,7 +553,7 @@
                 <div class="single-item col-6 col-lg-4 design"><a class="portfolio-item" href="img/item-3.jpg" data-lightbox>
                     <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-3.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Modern Bag Design</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Social media Creative</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
@@ -561,7 +561,7 @@
                 <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="img/item-4.jpg" data-lightbox>
                     <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-4.jpg">
                       <div class="item-content">
-                        <h6 class="content-title">Coffee Cup Design</h6><span class="content-more">More Info</span>
+                        <h6 class="content-title">Logo Design</h6><span class="content-more">More Info</span>
                       </div>
                     </div>
                   </a></div>
