--- a/index.html
+++ b/index.html
@@ -524,11 +524,8 @@
                 <!-- Filter nav-->
                 <div class="col-12">
                   <ul class="list-inline filter-control" role="group" aria-label="Filter Control">
-                    <li class="list-inline-item tab-active" data-filter="*">All</li>
-                    <li class="list-inline-item" data-filter=".brand">Brand</li>
-                    <li class="list-inline-item" data-filter=".design">Design</li>
-                    <li class="list-inline-item" data-filter=".photos">Photos</li>
-                  </ul>
+                    <li class="list-inline-item tab-active" data-filter="*">All Work</li>
+                                      </ul>
                 </div>
               </div>
               <!-- Thumbnail list-->
